server add stats interface
